@@ -2,7 +2,6 @@ package com.memoblend.web.auth;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -28,8 +27,7 @@ public class UserStoreImpl implements UserStore {
   public List<String> getLoginUserRoles() {
     final Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
     if (authentication != null) {
-      return authentication.getAuthorities().stream().map(GrantedAuthority::getAuthority)
-          .collect(Collectors.toList());
+      return authentication.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
     }
     return new ArrayList<>();
   }
